# Process this file with autoconf to produce a configure script.C
AC_INIT(rts2, 0.3.4, petr@lascaux.asu.cas.cz)

AM_INIT_AUTOMAKE([gnu dist-bzip2])

AC_PREREQ(2.50)

AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
#AC_PROG_RANLIB

AC_PROG_LIBTOOL

# Checks for libraries.

AC_CHECK_LIB([m], [sqrt], LIB_M="-lm";
LIBS="${LIBS} -lm"; AC_SUBST(LIB_M), [cat << EOF
**** You don't have math library.
**** Please install one and make sure, that it is available. 
EOF
exit 1])

AC_CHECK_LIB([cfitsio], [ffinit], LIB_CFITSIO="-lcfitsio"; 
AC_SUBST(LIB_CFITSIO), [cat <<EOF
**** You don't have cfitsio installed.
**** Please download one from 
**** http://heasarc.gsfc.nasa.gov/docs/software/fitsio/fitsio.html
EOF
exit 1])

AC_CHECK_LIB([wcs], [wcs2pix], LIB_WCS="-lwcs"; 
AC_SUBST(LIB_WCS), [cat <<EOF
**** You don't have libwcs installed.
**** You can download one from
**** http://tdc-www.harvard.edu/software/wcstools/.
**** Please note that there is no standart procedure to install
**** that library. You have to put headers and lib* files from
**** libwcs directory somewhere, where I can acces them
EOF
exit 1])

AC_CHECK_LIB([ncurses], [mvwprintw], LIB_NCURSES="-lncurses";
AC_SUBST(LIB_NCURSES), [cat << EOF
**** You don't have ncurser libraries.
**** Please install ncursers (you need devel package as well)
EOF
exit 1])

AC_CHECK_LIB([panel], [update_panels], LIB_PANEL="-lpanel";
AC_SUBST(LIB_PANEL), [cat <<EOF
**** You don't have panel library installed, which is
**** ussually part of ncurses library. Please prove
**** your system for such library.
EOF
exit 1])

AC_CHECK_LIB([nova], [ln_get_version], LIB_NOVA="-lnova"; 
AC_SUBST(LIB_NOVA), [cat << EOF
**** You don't have libnova library.
**** Please get one from http://libnova.sourceforge.net.
EOF
exit 1])

AC_CHECK_LIB([pthread], [pthread_exit], LIB_PTHREAD="-lpthread";
AC_SUBST(LIB_PTHREAD), [cat << EOF
**** You don't have pthread library installed.
**** Please try to get it somewhere.
EOF
exit 1])

AC_PATH_XTRA

AC_CHECK_LIB([efence], [malloc], LIB_EFENCE="-lefence", [cat << EOF
**** You don't have libefence library installed.
**** Please try to get it somewhere.
EOF
LIB_EFENCE=""])

AC_SUBST(LIB_EFENCE)

AC_CHECK_LIB([jpeg], [jpeg_mem_init], LIB_JPEG="-ljpeg";
AC_SUBST(LIB_JPEG), [cat << EOF
**** You don't have jpeg library installed.
**** Please try to get it somewhere.
EOF
exit 1])


WWWUSER="none"

AC_MSG_CHECKING(for httpd.conf)
httpd_conf=`find /etc /usr/local/etc -name httpd.conf 2>/dev/null | head -n1`
if test "z"$httpd_conf = "z" ; then
	AC_MSG_RESULT(none found)
else
	AC_MSG_RESULT($httpd_conf)
	AC_MSG_CHECKING(for User in httpd.conf)
	WWWUSER=`grep '^User.*$' $httpd_conf | head -n1 | sed -e "s/\(.*User *\| *$\)//"`
	AC_MSG_RESULT($WWWUSER)
fi

AC_SUBST(WWWUSER)

AC_MSG_CHECKING(for date)
DATE=`date +%Y-%m-%d`
if test "z"$DATE = "z" ; then
	AC_MSG_RESULT(none found)
	DATE="unknow"
else
	AC_MSG_RESULT($DATE)
fi

AC_SUBST(DATE)

#debug="-DDEBUG"
debug=""
AC_SUBST(debug)

CFLAGS="-Wall -Wshadow -g"
AC_SUBST(CFLAGS)

LDFLAGS=""
AC_SUBST(LDFLAGS)

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([argz.h arpa/inet.h dirent.h fcntl.h malloc.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h syslog.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Check for PostgreSQL
AC_POSTGRESQL
AC_ECPG

# Checks for library functions.
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_TYPE_SIGNAL
AC_FUNC_STRTOD
AC_CHECK_FUNCS([atexit dup2 floor gethostbyname gettimeofday inet_ntoa memmove memset select socket strchr strdup strerror strtol bzero mkdir sqrt strcasecmp strncasecmp pow])

AC_CHECK_HEADERS([limits.h]) 
AC_FUNC_CHOWN 
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES 
AC_FUNC_STAT
AC_FUNC_STRFTIME 
AC_FUNC_VPRINTF 
AC_PROG_CXX
AC_TYPE_MODE_T

AC_CONFIG_SRCDIR(src)
AM_CONFIG_HEADER(include/config.h)

AC_OUTPUT([Makefile
	   doc/Makefile
	   doc/dia/Makefile
	   doc/fitsdb/Makefile
	   man/Makefile
	   include/Makefile
	   html/Makefile
	   src/Makefile
	   src/bckimages/Makefile
	   src/camd/Makefile
	   src/camd/miniccd/Makefile
	   src/camd/sbigusb/Makefile
	   src/camd/urvc/Makefile
	   src/db/Makefile
	   src/dome/Makefile
	   src/focusc/Makefile
	   src/grb/Makefile
	   src/grb/bacodine/Makefile
	   src/grb/ibas/Makefile
	   src/monitor/Makefile
	   src/plan/Makefile
	   src/sql/Makefile
	   src/sql/grant.sql
	   src/pgsql/Makefile
	   src/phot/Makefile
	   src/serverd/Makefile
	   src/teld/Makefile
	   src/teld/lx200/Makefile
	   src/teld/losmandy/Makefile
	   src/teld/para/Makefile
	   src/utils/Makefile
	   src/utils/config.h
           src/wcs/Makefile
	   src/writers/Makefile
	   man/rts2.1
	   man/rts2.conf.5
	   man/rts2-centrald.1
	   man/rts2-cmon.1])
